# segmenters_lib

./: .clang-format  CMakeLists.txt  README.md  package.xml  readme.txt
.circleci/: config.yml
config/: detection.yaml
config/kitti/: Segmenter.yaml  detection.yaml  segmenter.yaml
example/: CMakeLists.txt  detection_node.cpp
include/segmenters/: GuassianProcess.h  base_segmenter.hpp  don_segmenter.hpp  euclidean_segmenter.hpp  ground_plane_fitting_segmenter.hpp  ground_ransac_segmenter.hpp  region_euclidean_segmenter.hpp  region_growing_segmenter.hpp  segmenter_manager.hpp
kitti/: README.md
launch/: demo.launch
rviz/: demo.rviz
samples/: detection_node.cpp
src/: GuassianProcess.cpp  don_segmenter.cpp  euclidean_segmenter.cpp  ground_plane_fitting_segmenter.cpp  ground_ransac_segmenter.cpp  region_euclidean_segmenter.cpp  region_growing_segmenter.cpp
